# green-robotic-arm

./: .gitignore  .gitmodules  README.md
docs/: 1-全体構造.md  2-環境構築.md  3-動作確認.md  README.md
model/: asm-main.wrl  main-asm.blend  main.blend  main.glb  output.csv  robot.urdf  urdf-writer.py
model/meshes/: Empty.004.mtl  base-1-1.mtl  base-2-1.mtl  motor-asm-1 motor-main-1.mtl  motor-mount1-1.mtl
src/common/: communication_const.hpp
src/learning/: analyze_input.py  dataloader.py  main.py  mnist.py  remove_last_delim.py  sample_plot.py  visualize_result.py
src/maestro/: .cproject  .project  CMakeLists.txt  README.md  connect.sh  send_file.bat  send_file.sh
src/maestro/app/: common.hpp  read_encoders.cpp  server_test.cpp  simple_bilateral.cpp  simple_bilateral_pc_powered.cpp  simple_motor_test.cpp
src/maestro/src/: TorqueControl.cpp  TorqueControl.hpp  get_cmmc_exception_error_message.hpp  hr4c.cpp  hr4c.hpp  logger.h
src/pc/: CMakeLists.txt  README.md  elmo_config.toml
src/pc/app/: axis_plot.cpp  calib_encoder.cpp  fsensor_test.cpp  read_all_axis.cpp  single_axis_test.cpp
src/pc/cmake/: config.cmake
src/pc/hr4c/: CMakeLists.txt  common.hpp
src/pc/hr4c/core/: AxisInterface.cpp  AxisInterface.hpp  AxisWrapper.cpp  AxisWrapper.hpp  ModbusClient.cpp  ModbusClient.hpp  ModbusServer.hpp  h4rc.cpp  h4rc.hpp  logger.hpp  propdict.hpp  robot.cpp  robot.hpp  time.hpp  vector.hpp
src/pc/hr4c/fsensor/: Fsensor.cpp  Fsensor.hpp  pCommon.h  rs_comm.cpp
src/pc/hr4c/graphics/: gui.cpp  gui.hpp
unused/green_core/: CMakeLists.txt
unused/green_core/config/: config.yaml
unused/green_core/include/devices/: udd_irt_control.h
unused/green_core/include/motor_controller/: green_motor_control.h
unused/green_core/scripts/: deploy.sh  hr4c_startup.sh
unused/green_core/src/: main.cpp  main_rt.cpp
unused/green_core/src/devices/: udd_irt_control.cpp
unused/green_core/src/motor_controller/: green_motor_control.cpp
